fix: visual tests and extra padding to route numbers

--- a/app/component/summary-row.scss
+++ b/app/component/summary-row.scss
@@ -157,6 +157,11 @@
         .vcenter-children {
           min-width: max-content !important; // forces the leg to fit the route number in it
         }
+        .route-number {
+          .vehicle-number-container-v {
+            padding-right: 10px;
+          }
+        }
       }
       &.bike_park {
         overflow: hidden;
@@ -234,7 +239,7 @@
             float: left;
             display: flex;
             height: 100%;
-            margin-left: 7px;
+            margin-left: 6px;
             .vehicle-number {
               align-self: center;
             }
@@ -262,6 +267,7 @@
               display: flex;
               height: 110%;
               padding-left: 5px;
+              padding-right: 3px;
               &.wait {
                 height: 100%;
               }
@@ -281,7 +287,7 @@
           height: 24px;
         }
           .vehicle-number-container-v {
-            padding-right: 1px;
+            padding-right: 5px;
             .long {
               left: 24px;
               top: 4px;
